# gdl

./: .gitignore  README.md
.github/workflows/: book.yml  deploy.yml
book/: .latexmkrc  Makefile  cover.tex  main.tex  preamble.tex  print-es.tex  print.tex  screen-es.tex  screen.tex
book/bib/: references.bib
book/chapters/: 03-geometric-priors.tex  04-grids.tex  07-geodesics-manifolds.tex  08-gauges.tex  09-applications.tex
book/figures/: alexnet_architecture.tex  cnn_to_spectral_graph.tex  conv_message_passing.tex  curvature_comparison.tex  epsilon_neighborhood_graph.tex  exponential_map.tex  fourier_pairs.tex  gauge_freedom.tex  gauge_transformation.tex  generate_plots.py  geodesic_convolution.tex  hyperbolic_embedding.tex  image_as_graph.tex  neuron_biological.tex  orbit_stabilizer.tex  parallel_transport_surface.tex  qkv_geometric_projection.tex  simplicial_hierarchy.tex  steerable_filters.tex  weisfeiler_leman.tex
book/frontmatter/: abstract.tex  cover.tex  preface.tex  titlepage.tex
book/glossary/: en.tex  es.tex
code/: README.md  main.py  pyproject.toml  test_cnn.py  test_cnn_quick.py  test_gnn.py
code/src/gdltfg/: __init__.py  attention_analysis.py  main.py
code/src/gdltfg/datasets/: __init__.py  synthetic.py
code/src/gdltfg/models/: __init__.py  cnn.py  equivariant_attention.py  gnn.py  graph_attention.py  group_cnn.py  steerable_cnn.py  transformer.py
code/src/gdltfg/visualizations/: __init__.py  manifold_alternatives.py  manifold_figures.py
scripts/: release.sh
web/: astro.config.mjs  package-lock.json  package.json
(+136 files in other folders)
