[project]
name = "gdltfg"
version = "0.1.0"
description = "Demonstration Geometric Deep Learning models for the GDL thesis (skeleton)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torch-vision>=0.1.6.dev0",
    "transformers>=4.52.4",
]
